Thu Dec  9 06:18:48 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): use the new
	BstCanvasSource API to properly connect links with input/output ids.

	* beast-gtk/bstcanvassource.[hc]: major rework, we deal with multiple
	input/output channels now.

Tue Dec  7 02:46:21 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvassource.c (bst_canvas_source_build): erk, don't
	draw a blackground for all items if not in aa mode.

Tue Dec  7 02:25:39 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstcanvassource.c (bst_canvas_source_build): make the
	whole thing clickable with "fill_color_rgba" 0x00000000.
	(create_canvas_icon): feature gdk_pixbuf if present.

	* configure.in: added check for BST_WITH_GDK_PIXBUF.

Mon Dec  6 03:43:08 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam.c (bst_entry_key_press): even more fixes to
	the clue hunter case.
	
	* beast-gtk/glewidgets.[hc]: pulled new sources.

Mon Dec  6 03:21:54 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam.c (bst_entry_key_press): fixed minor bug.

Mon Dec  6 02:35:37 1999  Tim Janik  <timj@gtk.org>

	* configure.in: removed gle dependancy.

	* beast-gtk/glewidgets.[hc]: source files containing headers and
	implementations of gtkcluehunter.[hc], gtkwrapbox.[hc],
	gtkhwrapbox.[hc], gtkvwrapbox.[hc], gtk_idle_show_widget() and
	gtk_file_selection_heal() out of the gle source tree.

	* beast-gtk/gle-pull.sh: script to pull gle sources.

	* beast-gtk/bstdefs.h: remove gle includes, include glewidgets.h.

	* beast-gtk/bstapp.[hc]: remove gle dependancies.

	* beast-gtk/bstmain.c: removed gle dependancies.
	
	* beast-gtk/beast.glr: got rid of that.

Sun Dec  5 18:11:31 1999  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstparam.c (bst_param_create): grow BseTime entry.

Sat Dec  4 22:51:25 1999  Tim Janik  <timj@gtk.org>

	* test/testmixer.bse: new file with olaf's old testmixer.c tune.

	* removed bstsongrouter.[hc].
