@@ -8,4 +8,4 @@ libtool
 config.status
 config.cache
 configure
-BEASTconfig.h
+PKG_config.h
