@@ -1,4 +1,4 @@
-/* BEASTconfig.h.in.  Generated automatically from configure.in by autoheader.  */
+/* PKG_config.h.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define to empty if the keyword does not work.  */
 #undef const
@@ -12,3 +12,5 @@
 #undef  BST_DFL_KEYTABLE
 #undef  BST_WITH_XKB
 #undef  BST_WITH_GDK_PIXBUF
+#undef  BSE_PCM_DEVICE_CONF_ALSA
+#undef  BSE_PCM_DEVICE_CONF_OSS
