@@ -6,3 +6,5 @@
 #undef  BST_DFL_KEYTABLE
 #undef  BST_WITH_XKB
 #undef  BST_WITH_GDK_PIXBUF
+#undef  BSE_PCM_DEVICE_CONF_ALSA
+#undef  BSE_PCM_DEVICE_CONF_OSS
