@@ -15,10 +15,10 @@
  * License along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
  */
-#include "bstcanvassource.h"
+#include	"bstcanvassource.h"
 
-#include "bstparamview.h"
-#include <BEASTconfig.h>
+#include	"bstparamview.h"
+#include	<PKG_config.h>
 
 
 
