@@ -1,3 +1,12 @@
+Sat Dec 11 04:38:41 1999  Tim Janik  <timj@gtk.org>
+
+	* configure.in: properly detect ALSA and -lasound.
+
+Thu Dec  9 21:06:54 1999  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): popup csource
+	view for button 1 as well (if not clicked into linkable area).
+
 Thu Dec  9 06:18:48 1999  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnetrouter.c (bst_snet_router_root_event): use the new
